feat: resource auth
feat: resource course

feat: resource take course

--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,8 @@ POSTGRES_PASSWORD="root1234"
 POSTGRES_HOST="localhost"
 POSTGRES_PORT="5432"
 POSTGRES_NAME="cyberapp"
+JWT_EXPIRES_IN=30m
+JWT_SECRET="secret2023mobilekjk"
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
